<project>
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.helidon.jlink</groupId>
    <artifactId>helidon-jlink-project</artifactId>
    <version>1.0-SNAPSHOT</version>

    <packaging>pom</packaging>

    <properties>
        <version.plugin.compiler>3.8.1</version.plugin.compiler>
        <version.plugin.jar>3.1.2</version.plugin.jar>
    </properties>

    <modules>
        <module>agent</module>
        <module>plugin</module>
    </modules>

    <dependencies>
        <!--
                <dependency>
                    <groupId>org.jsoup</groupId>
                    <artifactId>jsoup</artifactId>
                    <version>1.11.3</version>
                </dependency>
        -->
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${version.plugin.compiler}</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <compilerArgs>
                        <arg>--add-exports="java.base/jdk.internal.module=helidon.jlink"</arg>
                        <arg>--add-exports="jdk.jlink/jdk.tools.jlink.plugin=helidon.jlink"</arg>
                        <arg>--add-exports="jdk.jlink/jdk.tools.jlink.internal=helidon.jlink"</arg>
                    </compilerArgs>
                    <fork>true</fork>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
